fix(css):125 - fixed text-align

--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,7 @@
 
 body{
     font-size: 16px;
+    text-align: center;
+    
     background-color: red;
 }
